--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 </head>
+
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="#" alt="Logo">
+                <img width="25" src="assets/images/logo-sm.png" alt="">
+                <img width="" src="assets/images/logo-dark.png" alt="Logo">
             </div>
             <div class="social_media_icon">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
             </div>
         </nav>
     </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
