--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -15,14 +21,14 @@
                 <img width="" src="assets/images/logo-dark.png" alt="Logo">
             </div>
             <div class="social_media_icon">
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <a class="login_btn" href="#">Log in</a>
             </div>
         </nav>
     </header>
     <main></main>
     <footer></footer>
+
+    <script src="https://kit.fontawesome.com/54a16c130a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
