--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
         <nav>
             <div class="logo">
                 <img width="25" src="assets/images/logo-sm.png" alt="">
-                <img width="" src="assets/images/logo-dark.png" alt="Logo">
+                <img src="assets/images/logo-dark.png" alt="Logo">
             </div>
             <div class="social_media_icon">
                 <a class="login_btn" href="#">Log in</a>
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="hero">
+            <h1>Blogs Section For Everyone</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing <br>
+                and typesetting industry.</p>
+        </section>
+    </main>
     <footer></footer>
 
     <script src="https://kit.fontawesome.com/54a16c130a.js" crossorigin="anonymous"></script>
