--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
+        <section class="hero_section">
             <h1>Blogs Section For Everyone</h1>
             <p>Lorem Ipsum is simply dummy text of the printing <br>
                 and typesetting industry.</p>
+        </section>
+        <section class="blog">
+            <div class="first_half">
+                <p>Latest Posts</p>
+                <p>Today : 21 Augest 2023</p>
+            </div>
+            <div class="second_half">
+                <p>Related Posts</p>
+            </div>
         </section>
     </main>
     <footer></footer>
