--- a/index.html
+++ b/index.html
@@ -40,6 +40,35 @@
                 <p>Related Posts</p>
             </div>
         </section>
+        <section class="card_section">
+            <div class="main_card">
+                <div class="first_card">
+                    <div class="first_card_image">
+                        <img src="assets/images/sm-3.jpg" alt="">
+                    </div>
+                    <div class="first_card_text">
+                        <p>Health 23 Aug 2023</p>
+                        <h2>This is a best Blogs card for your business template.</h2>
+                        <div>
+                            <div>
+                                <img src="" alt="">
+                                <div>
+                                    <p></p>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <a href=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="second_card">
+
+                </div>
+            </div>
+            <div class="sub_card">
+
+            </div>
+        </section>
     </main>
     <footer></footer>
 
