--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                     <div class="first_card_text">
                         <p>Health 23 Aug 2023</p>
                         <h2>This is a best Blogs card for your business template.</h2>
-                        <div>
+                        <div style="display: flex; justify-content: space-between; align-items: end;">
                             <div>
                                 <img src="" alt="">
                                 <div>
-                                    <p></p>
-                                    <p></p>
+                                    <p>Fitbit Incorporation</p>
+                                    <p>San Diego, California</p>
                                 </div>
                             </div>
-                            <a href=""></a>
+                            <a href="#">Read More</a>
                         </div>
                     </div>
                 </div>
