--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div></div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/54a16c130a.js" crossorigin="anonymous"></script>
 </body>
