--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </main>
     <footer>
         <div></div>
+        <div></div>
     </footer>
 
     <script src="https://kit.fontawesome.com/54a16c130a.js" crossorigin="anonymous"></script>
