--- a/index.html
+++ b/index.html
@@ -61,6 +61,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="first_card">
+                    <div class="first_card_image">
+                        <img src="assets/images/sm-3.jpg" alt="">
+                    </div>
+                    <div class="first_card_text">
+                        <p>Health 23 Aug 2023</p>
+                        <h2>This is a best Blogs card for your business template.</h2>
+                        <div style="display: flex; justify-content: space-between; align-items: end;">
+                            <div>
+                                <img src="" alt="">
+                                <div>
+                                    <p>Fitbit Incorporation</p>
+                                    <p>San Diego, California</p>
+                                </div>
+                            </div>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="sub_card">
 
