--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="first_card">
+                <div class="second_card">
                     <div class="first_card_image">
                         <img src="assets/images/sm-3.jpg" alt="">
                     </div>
