--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <div class="first_card_text">
                         <p>Health 23 Aug 2023</p>
                         <h2>This is a best Blogs card for your business template.</h2>
-                        <div style="display: flex; justify-content: space-between; align-items: end;">
+                        <div style="display: flex; justify-content: space-between; align-items: end;margin-top: 110px;">
                             <div>
                                 <img src="" alt="">
-                                <div>
+                                <div class="author_signature">
                                     <p>Fitbit Incorporation</p>
                                     <p>San Diego, California</p>
                                 </div>
@@ -68,10 +68,10 @@
                     <div class="first_card_text">
                         <p>Health 23 Aug 2023</p>
                         <h2>This is a best Blogs card for your business template.</h2>
-                        <div style="display: flex; justify-content: space-between; align-items: end;">
+                        <div style="display: flex; justify-content: space-between; align-items: end;margin-top: 110px;">
                             <div>
                                 <img src="" alt="">
-                                <div>
+                                <div class="author_signature">
                                     <p>Fitbit Incorporation</p>
                                     <p>San Diego, California</p>
                                 </div>
