--- a/index.html
+++ b/index.html
@@ -82,7 +82,41 @@
                 </div>
             </div>
             <div class="sub_card">
-
+                <div class="card1">
+                    <a href="#">
+                        <h4>Sheikh Hasina fled to India</h4>
+                        <p style="color: gray;">Bangladesh’s International Crimes Tribunal (ICT) says it is taking steps
+                            to secure the...</p>
+                    </a>
+                </div>
+                <div class="card2">
+                    <a href="#">
+                        <h4>Sheikh Hasina fled to India</h4>
+                        <p style="color: gray;">Bangladesh’s International Crimes Tribunal (ICT) says it is taking steps
+                            to secure the...</p>
+                    </a>
+                </div>
+                <div class="card3">
+                    <a href="#">
+                        <h4>Sheikh Hasina fled to India</h4>
+                        <p style="color: gray;">Bangladesh’s International Crimes Tribunal (ICT) says it is taking steps
+                            to secure the...</p>
+                    </a>
+                </div>
+                <div class="card4">
+                    <a href="#">
+                        <h4>Sheikh Hasina fled to India</h4>
+                        <p style="color: gray;">Bangladesh’s International Crimes Tribunal (ICT) says it is taking steps
+                            to secure the...</p>
+                    </a>
+                </div>
+                <div class="card5">
+                    <a href="#">
+                        <h4>Sheikh Hasina fled to India</h4>
+                        <p style="color: gray;">Bangladesh’s International Crimes Tribunal (ICT) says it is taking steps
+                            to secure the...</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
