--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img src="assets/images/sm-3.jpg" alt="">
                     </div>
                     <div class="first_card_text">
-                        <p>Health 23 Aug 2023</p>
+                        <p><span class="special_text_effect">Health</span> 23 Aug 2023</p>
                         <h2>This is a best Blogs card for your business template.</h2>
                         <div style="display: flex; justify-content: space-between; align-items: end;margin-top: 110px;">
                             <div>
@@ -57,7 +57,7 @@
                                     <p>San Diego, California</p>
                                 </div>
                             </div>
-                            <a href="#">Read More</a>
+                            <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                         <img src="assets/images/sm-3.jpg" alt="">
                     </div>
                     <div class="first_card_text">
-                        <p>Health 23 Aug 2023</p>
+                        <p><span class="special_text_effect">Health</span> 23 Aug 2023</p>
                         <h2>This is a best Blogs card for your business template.</h2>
                         <div style="display: flex; justify-content: space-between; align-items: end;margin-top: 110px;">
                             <div>
@@ -76,7 +76,7 @@
                                     <p>San Diego, California</p>
                                 </div>
                             </div>
-                            <a href="#">Read More</a>
+                            <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -123,6 +123,8 @@
     <footer>
     </footer>
 
+    <!-- Font Awesome Script -->
+    <script src="https://kit.fontawesome.com/54a16c130a.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/54a16c130a.js" crossorigin="anonymous"></script>
 </body>
 
