--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
                         <p><span class="special_text_effect">Health</span> 23 Aug 2023</p>
                         <h2>This is a best Blogs card for your business template.</h2>
                         <div style="display: flex; justify-content: space-between; align-items: end;margin-top: 110px;">
-                            <div>
-                                <img src="" alt="">
+                            <div style="display: flex; align-items: center;">
+                                <img style="width: 13%; margin-bottom: -17px; padding-right: 7px;"
+                                    src="assets/images/avatar-1.jpg" alt="">
                                 <div class="author_signature">
                                     <p>Fitbit Incorporation</p>
-                                    <p>San Diego, California</p>
+                                    <p style="color: gray;">San Diego, California</p>
                                 </div>
                             </div>
                             <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
@@ -69,11 +70,12 @@
                         <p><span class="special_text_effect">Health</span> 23 Aug 2023</p>
                         <h2>This is a best Blogs card for your business template.</h2>
                         <div style="display: flex; justify-content: space-between; align-items: end;margin-top: 110px;">
-                            <div>
-                                <img src="" alt="">
+                            <div style="display: flex; align-items: center;">
+                                <img style="width: 13%; margin-bottom: -17px; padding-right: 7px;"
+                                    src="assets/images/avatar-1.jpg" alt="">
                                 <div class="author_signature">
                                     <p>Fitbit Incorporation</p>
-                                    <p>San Diego, California</p>
+                                    <p style="color: gray;">San Diego, California</p>
                                 </div>
                             </div>
                             <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
