--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Newser - Blog Tailwindcss Template</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="https://mannatthemes.com/blogloo/default/assets/images/favicon.ico"
+        type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <meta property="og:title" content="Blog" />
+    <meta property="og:description" content="Get from SEO newbie to SEO pro in 8 simple steps." />
+    <meta property="og:image" content="https://mannatthemes.com/blogloo/default/assets/images/favicon.ico" />
 </head>
 
 <body>
@@ -64,7 +69,7 @@
                 </div>
                 <div class="second_card">
                     <div class="first_card_image">
-                        <img src="assets/images/sm-3.jpg" alt="">
+                        <img src="assets/images/sm-1.jpg" alt="">
                     </div>
                     <div class="first_card_text">
                         <p><span class="special_text_effect">Health</span> 23 Aug 2023</p>
