--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <p style="color: gray;">San Diego, California</p>
                                 </div>
                             </div>
-                            <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
+                            <a href="##">Read More <i class="fa-solid fa-angles-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                                     <p style="color: gray;">San Diego, California</p>
                                 </div>
                             </div>
-                            <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
+                            <a href="##">Read More <i class="fa-solid fa-angles-right"></i></a>
                         </div>
                     </div>
                 </div>
